# tentacle-arduino

./: .gitignore  CMakeLists.txt  README.md  arduino-extern.hpp  arduino-mocks.h  build.sh  pins.cpp  pins.hpp  tentacle-arduino.cpp  tentacle-arduino.h  tentacle.cpp  tentacle.h  tentacle.hpp  test.sh
examples/: the-tentacle-1.ino
examples/tentacle-basic/: tentacle-basic.ino
src/: CMakeLists.txt  cmake-test.cpp  pin-config.cpp  pins.cpp  tentacle-pin.cpp  tentacle.cpp  tentacle.hpp  the-tentacle.hpp
src/include/: pin-config.hpp  pins.hpp  tentacle-pin.hpp  tentacle.hpp
test/: CMakeLists.txt  tentacle_spec.cpp
test/lib/arduino_mock/: CMakeLists.txt
test/lib/gmock/: CMakeLists.txt
test/lib/gtest/: CMakeLists.txt
test/tentacle/: CMakeLists.txt  callback-mocks.cpp  tentacle_spec.cpp
